# aethina

./: CMakeLists.txt  Readme.md
cmake/compiler/: clang.cmake  gcc.cmake  msvc.cmake
dep/boost/: configure_boost.cmake
src/: CMakeLists.txt
src/application/: CMakeLists.txt
src/application/include/: aethina_common.hpp
src/application/private/: dummy.cpp
src/application/resources/: aethina.rc
src/config/: CMakeLists.txt  aethina_config.hpp.in.cmake  create_config.cmake
src/core/: CMakeLists.txt
src/core/include/: aethina_core.hpp
src/core/private/: aethina_core.cpp
